--- a/public/03-Service-2.html
+++ b/public/03-Service-2.html
@@ -509,10 +509,12 @@
 			</div>
 			<!-- start sNews-->
 			<div class="sNews section" id="sNews">
-				<div class="container-wide">
+				<div class="container">
 					<div class="section-title">
 						<h2>Для этого клиента делали</h2>
 					</div>
+				</div>
+				<div class="container-wide">
 					<div class="row">
 						<div class="col-md-6">
 							<div class="news-item"><a href="#">
